[gd_scene load_steps=2 format=3 uid="uid://game_over_screen"]

[ext_resource type="Script" path="res://scripts/ui/GameOverScreen.gd" id="1_gameover"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
process_mode = 3
script = ExtResource("1_gameover")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0, 0, 0.85)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -220.0
offset_right = 200.0
offset_bottom = 220.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(0.9, 0.2, 0.2, 1)
text = "üíÄ GAME OVER"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.8, 0.8, 0.9, 1)
text = "üìä Estad√≠sticas"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Separator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="RetryButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üîÑ Reintentar"

[node name="MenuButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üè† Men√∫"
